# philter-lite

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  mypy.ini  pyproject.toml  setup.py  test.py  tox.ini
.github/workflows/: publish-package.yml  python-package.yml
configs/: philter_delta.json
data/phi/: fn.txt  fp.txt  summary.json
generate_dataset/: coordinate_map.py  main_ucsf_updated.py
philter_lite/: philter.py
philter_lite/configs/: philter_delta.toml
philter_lite/filters/: __init__.py
philter_ucsf/: __init__.py  __main__.py  coordinate_map.py  eval_scrubber_i2b2.py  eval_scrubber_ucsf.py  improve_i2b2_notes.py  philter.py  setup.py
tests/: test_package_metadata.py  test_philter.py
