[tool.poetry]
name = "philter-lite"
version = "0.4.0"
description = "Open-source PHI-filtering software. A fork of philter-ucsf."
readme = "README.md"
authors = ["Beau Norgeot <beaunorgeot@gmail.com>", "Tim Orme <tim@sironamedical.com>"]
license = "BSD-3-Clause"
classifiers=[
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.8"
chardet = "^5.2.0"
nltk = "^3.5"
xmltodict = "^0.13.0"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pre-commit = "^3.3.3"
pytest = "^7.4.0"

[tool.poetry.scripts]
philter_lite = 'philter_lite.main:main'

[build-system]
requires = ["poetry_core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
